--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "lint:scripts": "eslint . --ignore-path .gitignore",
     "optimize": "npm-run-all -p optimize:**",
     "optimize:raster": "gulp optimizeRaster",
-    "optimize:vector": "gulp optimizeVector",
-    "css": "gulp css"
+    "optimize:vector": "gulp optimizeVector"
   },
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "2.0.8",
