--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "^18.18 || ^20.9"
   },
   "browserslist": [
-    "last 2 versions",
+    "last 5 versions",
     "not dead",
     "not op_mini all",
     "not and_uc > 0",
@@ -28,7 +28,8 @@
     "lint:scripts": "eslint . --ignore-path .gitignore",
     "optimize": "npm-run-all -p optimize:**",
     "optimize:raster": "gulp optimizeRaster",
-    "optimize:vector": "gulp optimizeVector"
+    "optimize:vector": "gulp optimizeVector",
+    "css": "gulp css"
   },
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "2.0.8",
